[package]
name = "json-big"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bstr = "1.4.0"
memmap = "0.7.0"
once_cell = "1.17.1"
parking_lot = "0.12.1"
rayon = "1.7.0"
rustc-hash = "1.1.0"
serde = "1.0.157"
serde_json = "1.0.94"
structopt = "0.3.26"

[profile.release]
lto = "fat"
code-units = 1
